k8s/dotnetapp-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetesample
spec:
  replicas: 3
  selector:
    matchLabels:
      component: kubernetesample
  template:
    metadata:
      labels:
        component: kubernetesample
    spec:
      containers:
        - name: kubernetesample
          image: cemyldzz/kubernetesample:1.1
