k8s/dotnetapp-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetesample-server-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: kubernetesample
  ports:
    - port: 80
      targetPort: 80
